# lexer-generator

./: .editorconfig  .gitignore  LICENSE  Makefile  README.md  ejemplo.yal  pyproject.toml  slr_lexer.yal  yalex.py  yalex_cli.py
samples/inputs/: arithmetic_expressions.txt  imperative_core_sample.txt
specs/yal/: arithmetic_expression.yal  imperative_core.yal
src/yalex/: __init__.py  __main__.py  cli.py  codegen.py  dfa.py  diagnostics.py  dot.py  nfa.py  pipeline.py  regex_ast.py  regex_parser.py  spec_parser.py  trace.py
tests/: conftest.py  test_golden_arithmetic.py  test_lexical_pretty.py  test_regex_parser.py  test_spec_parser.py
tests/fixtures/: expected_tokens.txt
