[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yalex"
version = "0.1.0"
description = "Yet Another Lex — lexer generator for .yal specifications"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "mypy>=1.8",
    "pre-commit>=3.0",
]

[project.scripts]
yalex = "yalex.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/yalex"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_configs = true
packages = ["yalex"]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
